# VIR_initializer

./: CMakeLists.txt  main.cpp
include/: CoordMatch.hh  Functions.hh  RecordVideo.hh  SyncCamera.hh
src/: BoardCalib.cc  CoordMatch.cc  Functions.cc  RecordVideo.cc  SyncCamera.cc  ViewCoords.cc
